--- a/Recycler/app/src/main/res/layout/item_jean.xml
+++ b/Recycler/app/src/main/res/layout/item_jean.xml
@@ -1,35 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/linear_layout_jean"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@android:color/white"
-    android:padding="8dp"
     android:layout_margin="8dp"
-    android:orientation="vertical">
+    android:background="@android:color/white">
 
-    <TextView
-        android:id="@+id/name_text_jean"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-medium"
-        android:maxLines="1"
-        android:textSize="16sp"
-        android:layout_marginTop="8dp"/>
+    <LinearLayout
+        android:id="@+id/linear_layout_jean"
+        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:orientation="vertical"
+        android:padding="8dp">
 
-    <TextView
-        android:id="@+id/size_text_jean"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:textSize="12sp"/>
+        <TextView
+            android:id="@+id/name_text_jean"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-medium"
+            android:maxLines="1"
+            android:textSize="16sp"
+            android:layout_marginTop="8dp"/>
 
-    <TextView
-        android:id="@+id/price_text_jean"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="12sp"
-        android:layout_marginTop="8dp"/>
+        <TextView
+            android:id="@+id/size_text_jean"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:textSize="12sp"/>
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/price_text_jean"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"
+            android:layout_marginTop="8dp"/>
+    </LinearLayout>
+
+</android.support.v7.widget.CardView>
+
